@@ -2,6 +2,16 @@
 Version 1.8.0
 *******************************************************************************
 
+2010-03-15 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* SF Patch Tracker [ 2724578 ] patch for avoiding memory leaks when
+	add devices
+	
+	each time a device been added, UpnpInit() is called, on exit, UpnpFinish()
+	is called, but the memories allocated by ThreadPoolInit() may lost because
+	there's no code to call ThreadPoolShutdown() to release the memories. And
+	inet_ntoa() is not thread safe, so in my patch, I substitute inet_ntoa()
+	with inet_ntop().
+
 2010-03-14 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* SF Patch Tracker [ 2964687 ] Add new string based accessors to upnp
 	object API
